Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119084

Connections type doesn't work in qmltc'ed app

    XMLWordPrintable

Details

    • Linux/X11
    • c0eb34731 (dev), 3d8ce473d (6.6), e323b21dd (tqtc/lts-6.5)

    Description

      Build attached code and start executable. Clicking on rotating rectangle should stop rotation, but it doesn't. It doesn't work with the Connections type in compiled QML, but works for instance when using the qml runtime:

      qml window.qml
      

      or when using the onClicked handler directly in the MouseArea or with an explicit connect (marea.onClicked.connect(conn.onClicked).

      Besides that, the build system feels awkward (line "target_include_directories(exeqml PRIVATE ${PROJECT_BINARY_DIR}/.qmltc/${CPP_MODULE})" shouldn't be needed). Am I doing something wrong? 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes