src/qml/qml/qqmlboundsignal.cpp
@@ -179,7 +179,7 @@ void QQmlBoundSignalExpression::evaluate(void **a)
                     QMetaObjectPrivate::signal(targetMeta, m_index).methodIndex());
 
         int argCount = metaMethod.parameterCount();
-        QQmlMetaObject::ArgTypeStorage storage;
+        QQmlMetaObject::ArgTypeStorage<9> storage;
         storage.reserve(argCount + 1);
         storage.append(QMetaType()); // We're not interested in the return value
         for (int i = 0; i < argCount; ++i) {
